Bring back max-width on review page history comments/notes to prevent text overflow

--- a/static/css/zamboni/reviewers.less
+++ b/static/css/zamboni/reviewers.less
@@ -1132,6 +1132,7 @@ pre.history-comment {
 .history-notes, .history-comment {
     overflow: auto;
     max-height: 50em;
+    max-width: 510px;
     /* hack to show gradients indicating that there is some scrolling to do,
        in case the browser would decide to hide it despite overflow-y: scroll;
        See https://lea.verou.me/blog/2012/04/background-attachment-local/
